--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Prahalad-2004/VLM-project'"
               >
                 Github
               </button>
@@ -427,4 +427,5 @@
   </body>
 
 </html>
+
 
