--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Prahalad-2004/VLM-project'"
+                onclick="location.href='https://github.com/Prahalad-2004'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Prahalad-2004/VLM-project'"
               >
                 Live Demo
               </button>
@@ -427,5 +427,6 @@
   </body>
 
 </html>
+
 
 
